--- a/creatures/whitelady.html
+++ b/creatures/whitelady.html
@@ -184,7 +184,7 @@
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-12">
-					<h2 class="paragraph-title">Send Feedback</h2>
+					<h2 class="paragraph-title">Do you Encounter them? Kindly tell us.</h2>
 					<form>
 						<div class="form-group">
 							<input class="form-control" type="email" placeholder="E-Mail">
