--- a/gallery.html
+++ b/gallery.html
@@ -489,7 +489,7 @@
 							<a class="footer-hover nav-link" href="https://philippinemythicalcreatures.blogspot.com/" target="_blank">Philippine Mythical Creatures</a></li>
 						<li class="nav-item"><a class="footer-hover nav-link" href="http://www.mangkukulam.com/" target="_blank">Mangkukulam.com</a></li>
 						<li class="nav-item"><a class="footer-hover nav-link" href="https://www.aswangproject.com/" target="_blank">The Aswang Project</a></li>
-						<li class="nav-item"><a class="nav-link" href="http://bakitwhy.com/" target="_blank">Bakitwhy</a></li>
+						<li class="nav-item"><a class="footer-hover nav-link" href="http://bakitwhy.com/" target="_blank">Bakitwhy</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-3 col-sm-12">
@@ -512,7 +512,7 @@
 				</div>
 
 				<div class="col-lg-3 col-md-3 col-sm-12">
-					<h2 class="paragraph-title">Send Feedback</h2>
+					<h2 class="paragraph-title">Do you Encounter them? Kindly tell us.</h2>
 					<form>
 						<div class="form-group">
 							<input class="contact-form form-control" type="email" placeholder="E-Mail">
