--- a/land.html
+++ b/land.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA_Compatible" content="IE-Edge">
+	<link rel="icon" type="image/png" href="assets/images/home/icon.png">
 	<!-- <iframe class="d-none" src="assets/audio/piano.mp3"></iframe> -->
 	<iframe class="d-none" src="assets/audio/piano.ogg"></iframe>
-	<link rel="icon" type="image/png" href="assets/images/home/icon.png">
+	
 	<title> Capstone 1</title>
 
 
@@ -30,9 +31,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div id="enter-text" class="jumbotron bg-transparent">Featuring Philippines Scariest Creatures</div>
+			<div id="enter-text" class=" col-md-12 jumbotron bg-transparent">Featuring Philippines Scariest Creatures</div>
 			<!-- modal button -->
-			<a id="enter-btn" class="offset-lg-7 btn btn-outline-danger" type="button" data-toggle="modal" data-target="#mymodal" href="home.html">Enter at your own risk</a>
+			<a id="enter-btn" class="footer-hover offset-lg-7 btn btn-outline-danger" type="button" data-toggle="modal" data-target="#mymodal" href="home.html">Enter at your own risk</a>
 		</div>
 
 	</div><!-- container -->
