--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<!-- <iframe class="d-none" src="assets/audio/piano.mp3"></iframe> -->
 	<iframe class="d-none" src="assets/audio/piano.ogg"></iframe>
 	
-	<title> Capstone 1</title>
-
-
+	<title> WakWak </title>
+	
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<!-- bootstrap -->
-	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
+	<!-- bootstrap, popper, js -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<!-- animate css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 	<!-- hover css -->
@@ -24,16 +26,16 @@
 </head>
 <body>
 
-	<div id="land" class="container-fluid animated fadeIn">
+	<div id="land" class="container-fluid">
 		<div class="row">
 			<div class="col-lg-12">
-				<a id="land-title" class="jumbotron bg-transparent" href="#">WakWak</a>
+				<a id="land-title" class="jumbotron bg-transparent animated fadeIn" href="#">WakWak</a>
 			</div>
 		</div>
 		<div class="row">
-			<div id="enter-text" class=" col-md-12 jumbotron bg-transparent">Featuring Philippines Scariest Creatures</div>
+			<div id="enter-text" class=" col-md-12 jumbotron bg-transparent animated fadeIn">Featuring Philippines Scariest Creatures</div>
 			<!-- modal button -->
-			<a id="enter-btn" class="footer-hover offset-lg-7 btn btn-outline-danger" type="button" data-toggle="modal" data-target="#mymodal" href="home.html">Enter at your own risk</a>
+			<a id="enter-btn" class="footer-hover offset-lg-7 btn btn-outline-danger animated fadeIn" type="button" data-toggle="modal" data-target="#mymodal" href="home.html">Enter at your own risk</a>
 		</div>
 
 	</div><!-- container -->
@@ -70,38 +72,6 @@
 			</div><!-- modal end -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- jquery/popper/bootstrap js -->
-	<script src="assets/js/jquery-3.3.1.min.js"></script>
-
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-<!-- external bootstrap -->
-<script src="assets/js/bootstrap.min.js"></script>
 
 </body>
 </html>
