--- a/gallery.html
+++ b/gallery.html
@@ -48,7 +48,7 @@
 								<li class="dropdown">
 									<button type="button" class="tabs btn-font btn btn-outline-danger dropdown-toggle" data-toggle="dropdown">Creatures</button>
 									
-									<ul class="dropdown-menu">
+									<ul class="drop dropdown-menu">
 
 										<li class="tabs dropdown-item"><a class="btn-font" href="creatures/duwende.html">Duwende</a></li>
 										<li class="tabs dropdown-item"><a class="btn-font" href="creatures/whitelady.html">White Lady</a></li>
