--- a/creatures/whitelady.html
+++ b/creatures/whitelady.html
@@ -50,7 +50,7 @@
 								<li class="dropdown">
 									<button type="button" class="tabs btn-font btn btn-outline-danger dropdown-toggle" data-toggle="dropdown">Creatures</button>
 									
-									<ul class="dropdown-menu">
+									<ul class="drop dropdown-menu">
 
 										<li class="tabs dropdown-item"><a class="btn-font" href="duwende.html">Duwende</a></li>
 										<li class="tabs dropdown-item active"><a class="btn-font" href="whitelady.html">White Lady</a></li>
