--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
 
 		<p class="description"><em>Wakwak</em> was created as an educational resource to share the rich, colorful and diverse folklore of the Philippines.  Please feel free to contact us with any inquiries or questions. </p>
 
-		<p>If you encounter or have a photos of </p>
+		<p>If you encounter or have a photos of the creatures, Please Kindly share us your story.</p>
 
 		<p>If you have comments, question or you wish to get in touch with us, you may do so because you are important to us.</p>
 		
